@@ -1,0 +1,8 @@
+package test.listeners.issue3095;
+
+import org.testng.annotations.Test;
+
+public class ChildClassSample extends SuperClassSample {
+  @Test
+  public void childTestMethod() {}
+}
